# DocNest

./: .gitignore  Readme.md  admin.html  et --soft HEAD@{1}
DocNesttttt/: package.json
DocNesttttt/api/: upload.js
DocNesttttt/api/access/: index.js
DocNesttttt/api/artifacts/: [artifact_id].js  index.js
DocNesttttt/api/auth/: index.js
DocNesttttt/api/nodes/: [node_id].js
DocNesttttt/api/tree/: [node_id].js  index.js
DocNesttttt/api/users/: [user_id].js  index.js
DocNesttttt/lib/: auth.js  firebase-init.js
DocNesttttt/prisma/: schema.prisma
DocNesttttt/src/pages/api/access/: index.js
DocNesttttt/src/pages/api/artifacts/: [artifact_id].js  index.js
DocNesttttt/src/pages/api/nodes/: [node_id].js  index.js
DocNesttttt/src/pages/api/users/: [user_id].js  index.js
backend/: .env  Dockerfile  auth.py  firebase_setup.py  main.py  models.py  pyproject.toml  requirements.txt  test.py
backend/app/: main.py
backend/prisma/: schema.prisma
backend/routes/: access.py  activity.py  artifacts.py  auth_routes.py  health_check.py  nodes.py  tree.py  uploads.py  users.py
frontend/: _redirects  admin.html  home.html  index.html  login.html  login_admin.html  old_index.html  script.js  signup.html  style.css  user.html  user_login.html  userpage.html  vercel.json
under_dev/: .env  admin.html  auth.py  firebase_setup.py  index.html  login.html  main.py  models.py  style.css  user.html
under_dev/prisma/: schema.prisma
under_dev/routes/: access.py  artifacts.py  auth_routes.py  nodes.py  tree.py  uploads.py  users.py
