[project]
name = "docnest-backend"
version = "0.1.0"
description = "Backend API for DocNest"
authors = [{ name = "Srujan Rai" }]
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]

[tool.uv]  # optional: can be omitted if unused
